force-app/main/default/objects/Route_Constraint__c/Route_Constraint__c.object-meta.xml
<CustomObject>
    <description>Blocked route, weather impact, safety restriction or delivery constraint.</description>
    <label>Route Constraint</label>
    <nameField>
        <label>Constraint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Constraints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>