force-app/main/default/objects/Route_Constraint__c/fields/Constraint_Type__c.field-meta.xml
<CustomField>
    <fullName>Constraint_Type__c</fullName>
    <label>Constraint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Road Blocked</fullName>
                <default>true</default>
                <label>Road Blocked</label>
            </value>
            <value>
                <fullName>Weather Risk</fullName>
            </value>
            <value>
                <fullName>Capacity Limit</fullName>
            </value>
            <value>
                <fullName>Security Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>