force-app/main/default/objects/Route_Constraint__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Emergency_Incident__c</referenceTo>
    <relationshipLabel>Route Constraints</relationshipLabel>
    <relationshipName>Route_Constraints</relationshipName>
    <type>Lookup</type>
</CustomField>