force-app/main/default/objects/Route_Constraint__c/fields/Reported_At__c.field-meta.xml
<CustomField>
    <fullName>Reported_At__c</fullName>
    <label>Reported At</label>
    <type>DateTime</type>
</CustomField>